--- a/client/templates/index.html
+++ b/client/templates/index.html
@@ -3,7 +3,7 @@
   <ul>
     {{#each games}}
     <li>
-      {{name}}: {{_id}}, {{createdAt}}, {{updatedAt}}
+      <a href="game/{{_id}}">{{name}}</a>
     </li>
     {{/each}}
   </ul>
