draw graph that counts events per second

--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -4,13 +4,16 @@
     token: {{_id}}
   </p>
   <h2>Records</h2>
-  <ul>
+  <!-- <ul>
     {{#each records}}
       <li>
         {{fromNow createdAt}}: {{event.type}}
       </li>
     {{/each}}
-  </ul>
+  </ul> -->
+  <div id="records-graph">
+
+  </div>
 
   <h2>Errors</h2>
   <ul>
