draw multiple event types in one graph

--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -11,9 +11,8 @@
       </li>
     {{/each}}
   </ul> -->
-  <div id="records-graph">
-
-  </div>
+  <div id="records-graph"></div>
+  <!-- <div id="records-slider"></div> -->
 
   <h2>Errors</h2>
   <ul>
