Added option for sharing by link, if that is enabled in settings of game, and added some public games, which are seen by all users, if that is enabled in settings of game

--- a/client/templates/dashboard.html
+++ b/client/templates/dashboard.html
@@ -8,4 +8,13 @@
     {{/each}}
   </ul>
   {{> insertGameForm}}
+
+  <h2>Public games</h2>
+  	<ul>
+    {{#each publicGames}}
+    <li>
+      <a href="game/{{_id}}">{{name}}</a>
+    </li>
+    {{/each}}
+  </ul>
 </template>
