--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -22,6 +22,23 @@
     </li>
     {{/each}}
   </ul>
+
+  {{#if isOwner}}
+  <h2>Settings</h2>
+    <p>
+      <label>
+        <input type="checkbox" checked="{{isSharableByLink}}" class="toggleIsSharableByLink" />
+          Is sharable by link
+      </label>
+    </p>
+
+    <p>
+      <label>
+        <input type="checkbox" checked="{{isPublic}}" class="toggleIsPublic" />
+          Is public for everyone
+      </label>
+    </p>
+  {{/if}}
 </template>
 
 <template name="insertGameForm">
@@ -29,5 +46,5 @@
     <input type="text" name="name">
     <input type="submit" value="create game">
   </form> -->
-  {{> quickForm collection="Games" id="insertGameForm" type="insert" omitFields="createdAt, owner" buttonContent="create"}}
+  {{> quickForm collection="Games" id="insertGameForm" type="insert" omitFields="createdAt, owner, isSharableByLink, isPublic" buttonContent="create"}}
 </template>
