--- a/client/templates/signIn.html
+++ b/client/templates/signIn.html
@@ -4,7 +4,7 @@
   </p>
   {{> signInForm}}
   <p>
-    <a href="/sign_up">sign up</a>
+    {{#linkTo route="sign_up"}}sign up{{/linkTo}}
   </p>
 </template>
 
