simple filtering with textfield for json query modifications
might be replaced by some fancy input field, but works for now

--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -68,6 +68,8 @@
       Year
     </option>
   </select>
+   Filter:
+  <input id="recordsGraphDataFilter" type="text">
 
   <div id="records-graph"></div>
   <!-- <div id="records-slider"></div> -->
