Start to use Polymer for UI, see #3
Move bower components to public folder
Add polymer header bar to mainLayout.html

--- a/client/templates/layouts/mainLayout.html
+++ b/client/templates/layouts/mainLayout.html
@@ -1,11 +1,11 @@
 <template name="mainLayout">
-  <header>
-    {{> loginButtons}}
-    {{#linkTo route="dashboard"}}
-      Dashboard
-    {{/linkTo}}
-  </header>
-  <content>
-    {{> yield}}
-  </content>
+  <core-header-panel flex>
+    <core-toolbar>
+      <div>{{> loginButtons}} {{#linkTo route="dashboard"}} Dashboard {{/linkTo}}
+      </div>
+    </core-toolbar>
+    <div class="content" fit>
+      {{> yield}}
+    </div>
+  </core-header-panel>
 </template>
