--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -1,6 +1,14 @@
 <head>
-  <title>Investigator</title>
+  <title>Investigator Game Analytics</title>
+  <script src="/components/webcomponentsjs/webcomponents.js"></script>
+
+  <link rel="import" href="/components/core-elements/core-elements.html">
+  <link rel="import" href="/components/paper-elements/paper-elements.html">
+  <link rel="import" href="../components/font-roboto/roboto.html">
+
+  <link rel="stylesheet" href="/styles/main.css" media="screen" charset="utf-8">
 </head>
 
 <body>
+
 </body>
