Now it saves data about shared user

--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -98,6 +98,16 @@
     </p>
     {{> inputAutocomplete settings=settings id="inputShareToUser" class="inputShareToUser" placeholder="Share to user..."}} 
     <button class="shareToUser">Share game with user</button>  
+
+
+    <ul>
+      {{#each this.gameSharedToUser}}
+      <li>
+        {{sharedToUser}}
+      </li>
+      {{/each}}
+    </ul>
+
   {{/if}}
 </template>
 
