Redesigned to work also with users using other login services

--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -121,5 +121,5 @@
 </template>
 
 <template name="userPill">
-    <span class="label">{{getEmail}}</span>
+    <span class="label">{{publicUsername}}</span>
 </template>
