--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -109,6 +109,7 @@
       {{/each}}
     </ul>
     {{> updateGame}}
+    {{> deleteGame}}
   {{/if}}
 </template>
 
@@ -127,4 +128,11 @@
 <template name="updateGame">
   <h3>Change game name</h3>
   {{> quickForm collection="Games" doc=this id="updateGameForm" type="update" fields="name" buttonContent="Change name"}}
+</template>
+
+<template name="deleteGame">
+  <h3>Delete game</h3>
+  <!--<button class="deleteButton">Delete</button>-->
+  <!--{{> afDeleteButton collection="Games" doc=this}}-->
+  {{> quickRemoveButton collection="Games" _id=this._id beforeRemove=beforeRemove}}
 </template>
