--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -4,7 +4,10 @@
 
   <link rel="import" href="/components/core-elements/core-elements.html">
   <link rel="import" href="/components/paper-elements/paper-elements.html">
-  <link rel="import" href="../components/font-roboto/roboto.html">
+  <link rel="import" href="/components/font-roboto/roboto.html">
+
+  <link rel="import" href="/elements/paper-card/paper-card.html">
+  <link rel="import" href="/elements/game-card/game-card.html">
 
   <link rel="stylesheet" href="/styles/main.css" media="screen" charset="utf-8">
 </head>
