--- a/client/templates/layouts/mainLayout.html
+++ b/client/templates/layouts/mainLayout.html
@@ -1,11 +1,31 @@
 <template name="mainLayout">
-  <core-header-panel flex>
-    <core-toolbar>
-      <div>{{> loginButtons}} {{#linkTo route="dashboard"}} Dashboard {{/linkTo}}
-      </div>
-    </core-toolbar>
+  <core-scaffold>
+    <core-header-panel navigation flex mode="seamed">
+      <core-toolbar>Investigator</core-toolbar>
+      <core-menu>
+        <core-item icon="dashboard" label="Dashboard">
+          {{#linkTo route="dashboard"}}{{/linkTo}}
+        </core-item>
+        <core-item icon="add" label="New Game">
+          {{#linkTo route="newGame"}}{{/linkTo}}
+        </core-item>
+        <!-- <core-submenu icon="apps" label="My Games">
+          {{#each games}}
+          <core-item label="{{name}}">
+            {{#linkTo route="game.show" data=this}}{{/linkTo}}
+          </core-item>
+          {{/each}}
+        </core-submenu> -->
+      </core-menu>
+    </core-header-panel>
+    <!-- <div tool horizontal layout flex>
+      {{> loginButtons}}
+    </div> -->
+    <div tool flex>
+      {{> yield "title"}}
+    </div>
     <div class="content" fit>
       {{> yield}}
     </div>
-  </core-header-panel>
+  </core-scaffold>
 </template>
