--- a/client/templates/dashboard.html
+++ b/client/templates/dashboard.html
@@ -38,7 +38,7 @@
   <div class="games">
     {{#each publicGames}}
     <paper-card class="game-card" z=1>
-      <img src="http://placehold.it/1920x1080" />
+      <img src="http://placehold.it/1920x1080/D7CCC8/EFEBE9" />
       <h1>{{name}}</h1>
       <paper-item>
         {{#linkTo route="game.show" data=this}}Details{{/linkTo}}
