--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -8,7 +8,8 @@ core-header-panel {
 }
 
 .content {
-  margin: 16px;
+  /*margin: 16px;*/
+  padding: 16px;
 }
 
 .game-card {
@@ -28,4 +29,10 @@ a {
 
 a :hover {
   color: #222;
+}
+
+#floatingActionMenu {
+  position: fixed;
+  right: 50px;
+  bottom: 50px;
 }
