use google-chart

--- a/client/templates/game.html
+++ b/client/templates/game.html
@@ -67,7 +67,12 @@
         </option>
       </select>
 
-      <div id="records-graph"></div>
+      <!-- <div id="records-graph"></div> -->
+      <google-chart
+      id="records-graph"
+      class="chart"
+      type='area'>
+    </google-chart>
 
     </div>
   </paper-card>
