--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -5,6 +5,7 @@
   <link rel="import" href="/components/core-elements/core-elements.html">
   <link rel="import" href="/components/paper-elements/paper-elements.html">
   <link rel="import" href="/components/font-roboto/roboto.html">
+  <link rel="import" href="/components/google-chart/google-chart.html">
 
   <link rel="import" href="/elements/paper-card/paper-card.html">
   <link rel="import" href="/elements/game-card/game-card.html">
