--- a/client/templates/main.html
+++ b/client/templates/main.html
@@ -3,9 +3,11 @@
   <script src="/components/webcomponentsjs/webcomponents.js"></script>
 
   <link rel="import" href="/components/core-elements/core-elements.html">
+  <link rel="import" href="/components/core-icons/image-icons.html">
   <link rel="import" href="/components/paper-elements/paper-elements.html">
   <link rel="import" href="/components/font-roboto/roboto.html">
   <link rel="import" href="/components/google-chart/google-chart.html">
+  <link rel="import" href="/components/file-input/file-input.html">
 
   <link rel="import" href="/elements/paper-card/paper-card.html">
   <link rel="import" href="/elements/game-card/game-card.html">
