--- a/public/elements/paper-card/paper-card.css
+++ b/public/elements/paper-card/paper-card.css
@@ -25,6 +25,13 @@
   margin: 16px;
   font-weight: normal;
 }
+
+.content .image ::content file-input {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+}
+
 .content ::content h2 {
   color: #000;
   margin: 16px;
